RESOLVED FIXED227769
[JSC] Fix Object.assign fast path to accept undefined/null
https://bugs.webkit.org/show_bug.cgi?id=227769
Summary [JSC] Fix Object.assign fast path to accept undefined/null
Yusuke Suzuki
Reported 2021-07-07 14:00:20 PDT
[JSC] Fix Object.assign fast path to accept undefined/null
Attachments
Patch (16.54 KB, patch)
2021-07-07 14:01 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-07-07 14:01:31 PDT
Yusuke Suzuki
Comment 2 2021-07-07 14:01:34 PDT
Keith Miller
Comment 3 2021-07-07 14:04:51 PDT
Comment on attachment 433071 [details] Patch LGTM too.
EWS
Comment 4 2021-07-07 17:55:31 PDT
Committed r279690 (239495@main): <https://commits.webkit.org/239495@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433071 [details].
Note You need to log in before you can comment on or make changes to this bug.